# Sweep

./: .gitattributes  LICENSE  PHILOSOPHY.md  README.md  cli.spec  pyproject.toml
.github/workflows/: ci.yml
prototype/: README.md  main.py  pyproject.toml
src/sweep/: __init__.py  __main__.py  colors.py  main.py
tests/: conftest.py  test_benchmark.py  test_clean.py  test_find_dirs.py
