[project]
name = "sweep"
version = "0.3.1"
description = "A CLI tool to recursively find and delete unwanted folders like node_modules"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
sweep = "sweep.__main__:main"

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
    "pytest>=9.1.1",
    "pytest-benchmark>=5.2.3",
    "ruff>=0.15.22",
]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
